# soundDenoiser

./: .gitignore  README.md  pyproject.toml
src/sound_denoiser/: __init__.py  audio_player.py  denoiser.py  gui.py  ui_components.py  waveform_display.py
tests/: test_denoiser.py  test_denoiser_basic.py
