[project]
name = "sound-denoiser"
version = "0.1.0"
description = "Audio denoising tool for removing hiss from older recordings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
    "customtkinter>=5.2.0",
    "matplotlib>=3.7.0",
    "sounddevice>=0.4.6",
    "pydub>=0.25.0",
    "noisereduce>=3.0.0",
]

[project.scripts]
sound-denoiser = "sound_denoiser.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sound_denoiser"]

[tool.hatch.build.targets.sdist]
include = ["src/sound_denoiser"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
